<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/drivana_white"
    android:padding="32dp"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="61dp">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTagline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/tagline"
        android:textColor="@color/drivana_red"
        android:textSize="16sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivLogo" />

    <Button
        android:id="@+id/btnIniciarSesion"
        android:layout_width="285dp"
        android:layout_height="50dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/bg_button_gray"
        android:text="@string/iniciar_sesion"
        android:textAllCaps="false"
        android:textColor="@color/drivana_black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTagline" />

    <Button
        android:id="@+id/btnRegistrarse"
        android:layout_width="285dp"
        android:layout_height="50dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/bg_button_gray"
        android:text="@string/registrarse"
        android:textAllCaps="false"
        android:textColor="@color/drivana_black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnIniciarSesion" />

</androidx.constraintlayout.widget.ConstraintLayout>
